--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",      
-    "deploy": "gh-pages -d dist"     
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "appwrite": "^21.5.0",
+    "chart.js": "^4.5.1",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-calendar": "^6.0.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.10.1"
